--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -109,7 +109,7 @@
   }
 }
 
-@media screen and (max-width: 675px) and (max-height: 400px) {
+@media screen and (max-width: 675px) and (max-height: 3600px) {
   main {
     align-items: center;
     text-align: center;
